syntax = "proto3";

service Drivers {
	rpc Eta(EtaRequest) returns (EtaResponse) {}
	rpc Near(NearRequest) returns (NearResponse) {}
}

message Eta {
	uint64 eta = 1;
	uint64 count = 2;
	string service_type = 3;
}

message Driver {
	double latitude = 1;
	double longitude = 2;
	string service_type = 3;
}

message EtaRequest {
	double latitude = 1;
	double longitude = 2;
}

message EtaResponse {
	repeated Eta etas = 1;
}

message NearRequest {
	double latitude = 1;
	double longitude = 2;
}

message NearResponse {
	repeated Driver drivers = 1;
}
